More effective way to save the images

--- a/Seismic Attributes/seisattr.ipynb
+++ b/Seismic Attributes/seisattr.ipynb
@@ -139,21 +139,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for k, v in data_dir_dict.items():\n",
-    "    # k = attributes name => unused\n",
-    "    # v[0] = data_in_dir\n",
-    "    # v[1] = data_out_dir\n",
+    "# for k, v in data_dir_dict.items():\n",
+    "#     # k = attributes name => unused\n",
+    "#     # v[0] = data_in_dir\n",
+    "#     # v[1] = data_out_dir\n",
     "\n",
-    "    data = segyio.tools.cube(v[0]) # Every data dimension = (590, 782, 1006)\n",
+    "#     data = segyio.tools.cube(v[0]) # Every data dimension = (590, 782, 1006)\n",
+    "\n",
+    "#     # Save ilines into PNG format\n",
+    "#     for i in range(n_inlines):\n",
+    "#         file_name = os.path.join(v[1], 'Inlines', '{}.png'.format(str(i+1)))\n",
+    "#         plt.imsave(file_name, data[i].T)\n",
+    "\n",
+    "#     # Save ilines into PNG format\n",
+    "#     for i in range(n_crosslines):\n",
+    "#         file_name = os.path.join(v[1], 'Crosslines', '{}.png'.format(str(i+1)))\n",
+    "#         plt.imsave(file_name, data[:, i, :].T)\n",
+    "\n",
+    "#     # Clean data object in memory\n",
+    "#     del data\n",
+    "\n",
+    "\n",
+    "\n",
+    "for _, (data_in_dir, data_out_dir) in data_dir_dict.items():\n",
+    "    data = segyio.tools.cube(data_in_dir) # Every data dimension = (590, 782, 1006)\n",
     "\n",
     "    # Save ilines into PNG format\n",
     "    for i in range(n_inlines):\n",
-    "        file_name = os.path.join(v[1], 'Inlines', '{}.png'.format(str(i+1)))\n",
+    "        file_name = os.path.join(data_out_dir, 'Inlines', '{}.png'.format(str(i+1)))\n",
     "        plt.imsave(file_name, data[i].T)\n",
     "\n",
     "    # Save ilines into PNG format\n",
     "    for i in range(n_crosslines):\n",
-    "        file_name = os.path.join(v[1], 'Crosslines', '{}.png'.format(str(i+1)))\n",
+    "        file_name = os.path.join(data_out_dir, 'Crosslines', '{}.png'.format(str(i+1)))\n",
     "        plt.imsave(file_name, data[:, i, :].T)\n",
     "\n",
     "    # Clean data object in memory\n",
