Extract label images and read extracted images

--- a/Seismic Attributes/seisattr.ipynb
+++ b/Seismic Attributes/seisattr.ipynb
@@ -177,6 +177,127 @@
     "    # Clean data object in memory\n",
     "    del data"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "\n",
+    "#### Extract Labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import segyio\n",
+    "import os\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "\n",
+    "\n",
+    "labels_in_dir = '../dataset/TrainingData_Labels.segy'\n",
+    "assert os.path.isfile(labels_in_dir), 'Dataset label tidak ditemukan!'\n",
+    "\n",
+    "out_dir = os.path.join('output', 'Images')\n",
+    "if not os.path.exists(out_dir):\n",
+    "    os.makedirs(out_dir)\n",
+    "\n",
+    "labels_out_dir = os.path.join(out_dir, 'Labels')\n",
+    "if not os.path.exists(labels_out_dir):\n",
+    "    os.mkdir(labels_out_dir)\n",
+    "    os.mkdir(os.path.join(labels_out_dir, 'Inlines'))\n",
+    "    os.mkdir(os.path.join(labels_out_dir, 'Crosslines'))\n",
+    "\n",
+    "\n",
+    "\n",
+    "data = segyio.tools.cube(labels_in_dir)\n",
+    "n_inlines, n_crosslines = (590, 782)\n",
+    "\n",
+    "for i in range(n_inlines):\n",
+    "    file_name = os.path.join(labels_out_dir, 'Inlines', '{}.png'.format(str(i+1)))\n",
+    "    plt.imsave(file_name, data[i].T)\n",
+    "\n",
+    "for i in range(n_crosslines):\n",
+    "    file_name = os.path.join(labels_out_dir, 'Crosslines', '{}.png'.format(str(i+1)))\n",
+    "    plt.imsave(file_name, data[:, i, :].T)\n",
+    "\n",
+    "del data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "\n",
+    "#### Reading image dataset (inline)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from PIL import Image as im\n",
+    "import cv2\n",
+    "\n",
+    "input_image_dir = os.path.join('output', 'Images', 'Amplitude', 'Inlines', '2.png')\n",
+    "assert os.path.isfile(input_image_dir), 'Gambar tidak ditemukan!'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PIL:\n",
+      "<class 'PIL.PngImagePlugin.PngImageFile'>, (782, 1006)\n",
+      "\n",
+      "OpenCV:\n",
+      "<class 'numpy.ndarray'>, (1006, 782, 3)\n",
+      "\n",
+      "(782, 1006)\n"
+     ]
+    }
+   ],
+   "source": [
+    "image_pil = im.open(input_image_dir)\n",
+    "image_cv = cv2.imread(input_image_dir)\n",
+    "\n",
+    "print(f'PIL:\\n{type(image_pil)}, {image_pil.size}\\n')\n",
+    "print(f'OpenCV:\\n{type(image_cv)}, {image_cv.shape}\\n')\n",
+    "\n",
+    "image_cv_no_C = image_cv[:, :, 0].T\n",
+    "print(image_cv_no_C.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 782, 1006)\n"
+     ]
+    }
+   ],
+   "source": [
+    "coba = image_cv.T\n",
+    "print(coba.shape)"
+   ]
   }
  ],
  "metadata": {
