--- a/Seismic Attributes/seisattr.ipynb
+++ b/Seismic Attributes/seisattr.ipynb
@@ -298,6 +298,126 @@
     "coba = image_cv.T\n",
     "print(coba.shape)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Catatan lainnya"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TensorFlow dan Keras:\n",
+    "- Kelebihan: Kemudahan penggunaan dengan Keras, ekosistem besar, dukungan komunitas, deployment mudah.\n",
+    "- Kelemahan: Kurva pembelajaran curam, overhead komputasi, debugging kurang intuitif, ukuran dan kompleksitas framework.\n",
+    "\n",
+    "PyTorch:\n",
+    "- Kelebihan: Fleksibilitas, dynamic computation graph, intuitif untuk penelitian, dukungan komunitas yang berkembang cepat.\n",
+    "- Kelemahan: Perubahan besar di rilis baru, ekosistem lebih kecil, deployment lebih kompleks.\n",
+    "\n",
+    "OpenCV (cv2):\n",
+    "- Kelebihan: Sangat fleksibel untuk operasi gambar dan video, kuat untuk pra-pemrosesan gambar.\n",
+    "- Kelemahan: Tidak spesifik untuk deep learning, integrasi lebih rumit, membutuhkan lebih banyak kode untuk pra-pemrosesan.\n",
+    "\n",
+    "Pillow (PIL):\n",
+    "- Kelebihan: Mudah digunakan untuk operasi dasar pada gambar, integrasi dengan NumPy.\n",
+    "- Kelemahan: Fitur terbatas, performa kurang optimal untuk pengolahan gambar skala besar, tidak spesifik untuk deep learning."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torchvision import datasets, transforms\n",
+    "from torch.utils.data import DataLoader\n",
+    "\n",
+    "# transform = transforms.Compose([\n",
+    "#     transforms.Resize((256, 256)),\n",
+    "#     transforms.ToTensor()\n",
+    "# ])\n",
+    "\n",
+    "# Harus ke dalam class sehingga dalam folder Inlines,\n",
+    "# buat folder class0 dan isi dgn gambar, begitu jg untuk class1 dan seterusnya\n",
+    "# dataset = datasets.ImageFolder('path/to/directory', transform=transform)\n",
+    "images_dir = os.path.join('output', 'Images', 'Amplitude', 'Inlines')\n",
+    "dataset = datasets.ImageFolder(images_dir) # Output: torchvision.datasets.folder.ImageFolder\n",
+    "dataloader = DataLoader(dataset, batch_size=32, shuffle=True)\n",
+    "\n",
+    "# Contoh iterasi melalui DataLoader\n",
+    "for images, labels in dataloader:\n",
+    "    print(images.shape, labels.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Original 3D array:\n",
+      "[[[1 2]\n",
+      "  [3 4]]\n",
+      "\n",
+      " [[5 6]\n",
+      "  [7 8]]]\n",
+      "\n",
+      "Transposed 3D array with specific axes order using np.transpose:\n",
+      "[[[1 2]\n",
+      "  [5 6]]\n",
+      "\n",
+      " [[3 4]\n",
+      "  [7 8]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "array_3d = np.array([[[1, 2], [3, 4]], [[5, 6], [7, 8]]])\n",
+    "\n",
+    "# Mentansposisi dengan urutan sumbu tertentu\n",
+    "transposed_array_3d = np.transpose(array_3d, (1, 0, 2))\n",
+    "\n",
+    "print(\"\\nOriginal 3D array:\")\n",
+    "print(array_3d)\n",
+    "print(\"\\nTransposed 3D array with specific axes order using np.transpose:\")\n",
+    "print(transposed_array_3d)\n",
+    "\n",
+    "# [\n",
+    "#     [\n",
+    "#         [1 2] # 000 001\n",
+    "#         [3 4] # 010 011\n",
+    "#     ]\n",
+    "\n",
+    "#     [\n",
+    "#         [5 6] # 100 101\n",
+    "#         [7 8] # 110 111\n",
+    "#     ]\n",
+    "# ]\n",
+    "\n",
+    "# ---\n",
+    "\n",
+    "# [\n",
+    "#     [\n",
+    "#         [1 2] # 000 001\n",
+    "#         [5 6] # 100 101\n",
+    "#     ]\n",
+    "\n",
+    "#     [\n",
+    "#         [3 4] # 010 011\n",
+    "#         [7 8] # 110 111\n",
+    "#     ]\n",
+    "# ]"
+   ]
   }
  ],
  "metadata": {
